--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,34 @@
 /*  your css code here. If applicable */
+body{
+	background:#f8f8f8;
+}
+.heading{
+	background:#f8f8f8;
+	text-align:center;
+	padding:10px;
+}
+.book-library{
+	background:#ffffff;
+	width:90%;
+	margin:30px;
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+	border-radius:5px;
+	
+}
+.author{
+	color:#777777;
+}
+.price{
+	background:#2ecc71;
+	text-align:center;
+	padding:5px;
+}
+
+img{
+	margin:0 130px;
+}
+.book{
+	background:#f8f8f8;
+	margin:20px 0px;
+	padding:10px
+}
